Adapt: Remotely Structured Logging And Storage Paths.